﻿Version 1.5:
	Fixed tag overlaps code bug

Version 1.4:
	Use bigger font size for tags
	Fixed an issue where keyboard inputs got lost after click on tag
	Fixed Visual Studio 2015 not showing tags

Version 1.3:
	Fixed ArgumentOutOfRangeException on copy&paste
	Added ability to 'click through' tags, when CTRL+Click option is set
	Scale tags with editor line height (font size)

Version 1.2:
	Visual Studio 2017 Support
	Added CTRL+Click to navigation option
	Strip unnecessary spaces from tags
	Hide tags when caret is in same line

Version 1.1:
	Fixed ArgumentOutOfRangeException

Version 1.0:
	Initial Release