@@ -1,5 +1,6 @@
 ﻿Version 1.5:
 	Fixed tag overlaps code bug
+	Added "Tag Size" Option for custom tag scale
 
 Version 1.4:
 	Use bigger font size for tags
